--- a/site/QuestionThink/pagina-livros/pagina-livros.html
+++ b/site/QuestionThink/pagina-livros/pagina-livros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pagina-livros2.css?v=1.2">
+    <link rel="stylesheet" href="pagina-livros2.css">
 
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <title>Livros</title>
@@ -46,9 +46,12 @@
             <li><div class="item efeito-livro1"><img src="../img/Faça as perguntas certas e viva melhor.jpg" alt="" id="livro"></li>
             <li><div class="item efeito-livro2"><img src="../img/Nada pode me ferir.jpg" alt=""></div></li>
             <li><div class="item efeito-livro3"><img src="../img/A Volta ao Mundo em 80 Dias.jpg" alt=""></div></li>
-            <li><div class="item efeito-livro4"><img src="../img/Estação Carandiru.jfif" alt=""></div></li>
-            <li><div class="item efeito-livro5"><img src="../img/Primeira-Guerra-Mundial.png" alt=""></div></li>
-            <li><div class="item efeito-livro6"><img src="../img/Segunda-Guerra-Mundial.png" alt=""></div></li>
+            <li><div class="item efeito-livro1"><img src="../img/Estação Carandiru.jfif" alt=""></div></li>
+            <li><div class="item efeito-livro2"><img src="../img/Primeira-Guerra-Mundial.png" alt=""></div></li>
+            <li><div class="item efeito-livro3"><img src="../img/Segunda-Guerra-Mundial.png" alt=""></div></li>
+            <li><div class="item efeito-livro1"><img src="../img/seneca-Sobre a Vida Feliz e Tranquilidade Da Alma.jpg" alt=""></div></li>
+            <li><div class="item efeito-livro2"><img src="../img/seneca-Sobre-a-Brevidade-Da-Vida.png" alt=""></div></li>
+            <li><div class="item efeito-livro3"><img src="../img/george orwell- 1984.jpg" alt=""></div></li>
         </ul>
     </main>
     <div id="divisor2"></div>
